some changes to the RPi Agent

--- a/RaspberryPiAgent/deviceConfigs.cfg
+++ b/RaspberryPiAgent/deviceConfigs.cfg
@@ -1,6 +1,6 @@
 [Device-Configurations]
-owner = teamiot
-deviceId = skmqnfd4cfud
+owner = sumedhaR
+deviceId = tog547kbe44k
 auth-method = token
-auth-token = 686fba1f467f22e70287c2cadd56775
+auth-token = 373be294c9eabad389cd2037c7d79d22
 refresh-token =59773d663fb623decb0943663a050d6
