edited deb file, deviceConfigs file and the startup script

--- a/RaspberryPiAgent/deviceConfigs.cfg
+++ b/RaspberryPiAgent/deviceConfigs.cfg
@@ -1,6 +1,6 @@
 [Device-Configurations]
-owner = sumedhaR
-deviceId = tog547kbe44k
+owner = ${DEVICE_OWNER}
+deviceId = ${DEVICE_ID}
 auth-method = token
-auth-token = 373be294c9eabad389cd2037c7d79d22
-refresh-token =59773d663fb623decb0943663a050d6
+auth-token = ${DEVICE_TOKEN}
+refresh-token = ${REFRESH_TOKEN}
