--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+# Ignore everything in this directory
+target
+.classpath
+.settings
+.project
+*.iml
+*.iws
+*.ipr
+.idea
+
+# Mac crap
+.DS_Store
+
+
 *.class
 
 # Mobile Tools for Java (J2ME)
@@ -10,3 +24,11 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Ignore everything in this directory
+target
+.classpath
+.settings
+.project
+*.iml
+.idea
