--- a/FireAlarmVirtualAgent/pom.xml
+++ b/FireAlarmVirtualAgent/pom.xml
@@ -44,4 +44,48 @@
         </plugins>
     </build>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-server</artifactId>
+            <version>8.1.3.v20120416</version>
+        </dependency>
+
+        <!--Dependency on MQTT Client Library-->
+        <dependency>
+            <groupId>org.eclipse.paho</groupId>
+            <artifactId>mqtt-client</artifactId>
+            <version>${paho.mqtt.version}</version>
+        </dependency>
+
+        <!--Dependancies on XMPP Client Library-->
+        <dependency>
+            <groupId>org.igniterealtime.smack.wso2</groupId>
+            <artifactId>smack</artifactId>
+            <version>${smack.wso2.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.igniterealtime.smack.wso2</groupId>
+            <artifactId>smackx</artifactId>
+            <version>${smackx.wso2.version}</version>
+        </dependency>
+
+
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>${log4j.version}</version>
+		</dependency>
+    </dependencies>
+
+    <properties>
+        <!-- Java Version Compatibility -->
+        <!--<wso2.maven.compiler.source>1.7</wso2.maven.compiler.source>-->
+        <!--<wso2.maven.compiler.target>1.7</wso2.maven.compiler.target>-->
+        <smack.wso2.version>3.0.4.wso2v1</smack.wso2.version>
+        <smackx.wso2.version>3.0.4.wso2v1</smackx.wso2.version>
+        <paho.mqtt.version>0.4.0</paho.mqtt.version>
+		<log4j.version>1.2</log4j.version>
+    </properties>
+
 </project>
