Fine tuning the virtual agent

--- a/FireAlarmVirtualAgent/src/main/resources/deviceConfig.properties
+++ b/FireAlarmVirtualAgent/src/main/resources/deviceConfig.properties
@@ -17,14 +17,15 @@
 
 #Device-Specific Configurations
 #Thu Sep 24 00:54:48 IST 2015
-auth-method=token
-mqtt-ep=tcp://10.100.7.38:1883
-server-ep=10.100.7.38:9763
-refresh-token=1234567890ZYXWVUTSRQPONMKLJIHGFEDCBA
-xmpp-ep=192.168.57.129:9090
-auth-token=ABCDEFGHIJKLMNOPQRSTUVWXYZ0987654321
-deviceId=s4uniti7ntix
 owner=Shabirmean
-network-interface=wlp4s0
-push-interval=20
-
+deviceId=sampleId
+server-ep=10.100.7.38:9443
+service-ep=10.100.7.38:9763
+apim-ep=192.168.67.21:8281
+mqtt-ep=192.168.67.21:1883
+xmpp-ep=192.168.67.22:5222
+auth-method=token
+auth-token=ABCDEFGHIJKLMNOPQRSTUVWXYZ0987654321
+refresh-token=1234567890ZYXWVUTSRQPONMKLJIHGFEDCBA
+network-interface=wlan0
+push-interval=15
