added 'deviceName' name property to the agentConfigs

--- a/FireAlarmVirtualAgent/src/main/resources/deviceConfig.properties
+++ b/FireAlarmVirtualAgent/src/main/resources/deviceConfig.properties
@@ -18,6 +18,7 @@
 #[Device-Configurations]
 owner=shabirmean
 deviceId=t4ctwq8qfl11
+device-name=SMEAN_t4ctwq8qfl11
 controller-context=/virtual_firealarm/controller
 https-ep=https://localhost:9443
 http-ep=http://localhost:9763
