--- a/FireAlarmVirtualAgentAdvanced/pom.xml
+++ b/FireAlarmVirtualAgentAdvanced/pom.xml
@@ -45,7 +45,7 @@
 					<archive>
 						<manifest>
 							<mainClass>
-								org.wso2.carbon.device.mgt.iot.agent.firealarm.virtual.Bootstrap
+								org.wso2.carbon.device.mgt.iot.agent.firealarm.Bootstrap
 							</mainClass>
 						</manifest>
 					</archive>
@@ -112,11 +112,6 @@
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>4.5</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.paho</groupId>
-			<artifactId>mqtt-client</artifactId>
-			<version>0.4.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
