--- a/FireAlarmVirtualAgent/pom.xml
+++ b/FireAlarmVirtualAgent/pom.xml
@@ -134,6 +134,31 @@
 			<artifactId>commons-logging</artifactId>
 			<version>${log4j.version}</version>
 		</dependency>
+
+        <dependency>
+            <groupId>org.bouncycastle.wso2</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>${bcprov.wso2.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bouncycastle.wso2</groupId>
+            <artifactId>bcpkix-jdk15on</artifactId>
+            <version>${bcpkix.wso2.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bouncycastle.wso2</groupId>
+            <artifactId>bcmail-jdk15on</artifactId>
+            <version>${bcmail.wso2.version}</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.google.code.jscep.wso2</groupId>
+            <artifactId>jscep</artifactId>
+            <version>${jscep.version}</version>
+        </dependency>
+
+
     </dependencies>
 
     <repositories>
@@ -161,6 +186,11 @@
         <smackx.wso2.version>3.0.4.wso2v1</smackx.wso2.version>
         <paho.mqtt.version>0.4.0</paho.mqtt.version>
 		<log4j.version>1.2</log4j.version>
+        <jscep.version>2.0.2.wso2v2</jscep.version>
+        <!--<jscep.version>2.0.2</jscep.version>-->
+        <bcprov.wso2.version>1.49.wso2v1</bcprov.wso2.version>
+        <bcpkix.wso2.version>1.49.wso2v1</bcpkix.wso2.version>
+        <bcmail.wso2.version>1.49.wso2v1</bcmail.wso2.version>
     </properties>
 
 </project>
