--- a/wso2_sense_agent/app/src/main/AndroidManifest.xml
+++ b/wso2_sense_agent/app/src/main/AndroidManifest.xml
@@ -9,11 +9,12 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.BATTERY_STATS"/>
+    <uses-permission android:name="android.permission.BATTERY_STATS" />
+    <uses-sdk android:minSdkVersion="19" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/wso2logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -39,7 +40,6 @@
             android:label="@string/app_name" >
         </service>
 
-
         <receiver android:name="org.wso2.carbon.iot.android.sense.service.SenseScheduleReceiver" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
@@ -56,20 +56,27 @@
             </intent-filter>
         </receiver>
 
-
         <activity
             android:name="org.wso2.carbon.iot.android.sense.register.SenseDeEnroll"
-            android:label="@string/title_activity_sense_settings">
-            <!--android:parentActivityName="org.wso2.carbon.iot.android.sense.register.RegisterActivity" >-->
-            <!--<meta-data-->
-                <!--android:name="android.support.PARENT_ACTIVITY"-->
-                <!--android:value="org.wso2.carbon.iot.android.sense.register.RegisterActivity" />-->
+            android:label="@string/title_activity_sense_settings" >
 
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
+            <!-- android:parentActivityName="org.wso2.carbon.iot.android.sense.register.RegisterActivity" > -->
+            <!-- <meta-data -->
+            <!-- android:name="android.support.PARENT_ACTIVITY" -->
+            <!-- android:value="org.wso2.carbon.iot.android.sense.register.RegisterActivity" /> -->
 
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
+
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
+        </activity>
+        <activity
+            android:name="org.wso2.carbon.iot.android.sense.ActivitySelectSensor"
+            android:label="My Sensors"
+            android:theme="@style/AppTheme.NoActionBar" >
         </activity>
     </application>
 
