MQTT dependancy added to gradle file and code cleaned up

--- a/wso2_sense_agent/app/build.gradle
+++ b/wso2_sense_agent/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-ads:8.1.0'
     compile 'com.google.android.gms:play-services-identity:8.1.0'
     compile 'com.google.android.gms:play-services-gcm:8.1.0'
+    compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.0.2'
 }
