--- a/wso2_sense_agent/build.gradle
+++ b/wso2_sense_agent/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     repositories {
         jcenter()
+        maven { url 'https://repo.eclipse.org/content/repositories/paho-releases/' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.3.0'
@@ -15,5 +16,6 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url 'https://repo.eclipse.org/content/repositories/paho-releases/' }
     }
 }
