--- a/wso2_sense_agent/app/src/main/AndroidManifest.xml
+++ b/wso2_sense_agent/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.BATTERY_STATS" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-sdk android:minSdkVersion="19" />
 
     <application
@@ -18,7 +19,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="org.wso2.carbon.iot.android.sense.register.RegisterActivity"
+            android:name="org.wso2.carbon.iot.android.sense.RegisterActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustResize|stateVisible" >
             <intent-filter>
@@ -29,18 +30,18 @@
         </activity>
 
         <service
-            android:name="org.wso2.carbon.iot.android.sense.service.SenseService"
+            android:name="org.wso2.carbon.iot.android.sense.event.SenseService"
             android:enabled="true"
             android:label="@string/app_name" >
         </service>
 
         <service
-            android:name="org.wso2.carbon.iot.android.sense.scheduler.DataUploaderService"
+            android:name="org.wso2.carbon.iot.android.sense.data.publisher.DataPublisherService"
             android:enabled="true"
             android:label="@string/app_name" >
         </service>
 
-        <receiver android:name="org.wso2.carbon.iot.android.sense.service.SenseScheduleReceiver" >
+        <receiver android:name="org.wso2.carbon.iot.android.sense.event.SenseScheduleReceiver" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.QUICKBOOT_POWERON" />
@@ -49,7 +50,7 @@
             </intent-filter>
         </receiver>
         <receiver
-            android:name="org.wso2.carbon.iot.android.sense.events.input.battery.BatteryDataReceiver"
+            android:name="org.wso2.carbon.iot.android.sense.event.streams.battery.BatteryDataReceiver"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.BATTERY_CHANGED" />
@@ -57,25 +58,13 @@
         </receiver>
 
         <activity
-            android:name="org.wso2.carbon.iot.android.sense.register.SenseDeEnroll"
-            android:label="@string/title_activity_sense_settings" >
-
-            <!-- android:parentActivityName="org.wso2.carbon.iot.android.sense.register.RegisterActivity" > -->
-            <!-- <meta-data -->
-            <!-- android:name="android.support.PARENT_ACTIVITY" -->
-            <!-- android:value="org.wso2.carbon.iot.android.sense.register.RegisterActivity" /> -->
-
-
-            <!-- <intent-filter> -->
-            <!-- <action android:name="android.intent.action.MAIN" /> -->
-
-
-            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-            <!-- </intent-filter> -->
-        </activity>
-        <activity
             android:name="org.wso2.carbon.iot.android.sense.sensordataview.ActivitySelectSensor"
             android:label="My Sensors"
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+        <activity
+            android:name="org.wso2.carbon.iot.android.sense.speech.detector.WordRecognitionActivity"
+            android:label="Speech Recongnizer"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
     </application>
