--- a/wso2_sense_agent/app/src/main/AndroidManifest.xml
+++ b/wso2_sense_agent/app/src/main/AndroidManifest.xml
@@ -58,7 +58,7 @@
         </receiver>
 
         <activity
-            android:name="org.wso2.carbon.iot.android.sense.sensordataview.ActivitySelectSensor"
+            android:name="org.wso2.carbon.iot.android.sense.realtimeviewer.ActivitySelectSensor"
             android:label="My Sensors"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
